[project]
name = "app"
description = "API con FastAPI, Poetry y semantic-release"
authors = [
    {name = "Tu Nombre",email = "tu@correo.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn[standard] (>=0.34.1,<0.35.0)"
]

[tool.poetry]
name = "app"
readme = "README.md"
packages = [
  { include = "app" }
]

[virtualenvs]
package-mode = false

[tool.poetry.group.dev.dependencies]
python-semantic-release = "^9.21.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = "app/__init__.py:__version__"
version_toml = [
  "pyproject.toml:tool.poetry.version",
  "pyproject.toml:project.version"
]
upload_to_pypi = false         # pon true si quieres publicar en PyPI
branch = "main"
commit_author = "github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>"
changelog_file = "CHANGELOG.md"

[tool.poetry.scripts]
release = "semantic_release.cli:main"